adding genericity