@@ -14,7 +14,8 @@ public class ColorIntParser implements DataParser {
      * Returns int.class.
      * @see prefuse.data.parser.DataParser#getType()
      */
-    public Class getType() {
+    @SuppressWarnings("rawtypes")
+	public Class getType() {
         return int.class;
     }
     
@@ -49,7 +50,7 @@ public class ColorIntParser implements DataParser {
      * @see prefuse.data.parser.DataParser#parse(java.lang.String)
      */
     public Object parse(String text) throws DataParseException {
-        return new Integer(parseInt(text));
+        return Integer.valueOf(parseInt(text));
     }
     
     /**
